--- a/etc/Fixtures/motorsport.event.eventStep.yaml
+++ b/etc/Fixtures/motorsport.event.eventStep.yaml
@@ -32,3 +32,14 @@ singaporeGrandPrix2022Race:
   stepTypeId: '@motorsport.event.stepType.race'
   eventId: '@motorsport.event.event.singaporeGrandPrix2022'
   dateTime: '2022-10-02 12:00:00'
+
+hungarianGrandPrix2019Race:
+  stepTypeId: '@motorsport.event.stepType.race'
+  eventId: '@motorsport.event.event.hungarianGrandPrix2019'
+  dateTime: '2019-08-04 13:10:00'
+  label: 'Hungarian GP'
+
+belgianGrandPrix2019Race:
+  stepTypeId: '@motorsport.event.stepType.race'
+  eventId: '@motorsport.event.event.belgianGrandPrix2019'
+  dateTime: '2019-09-01 13:10:00'
