--- a/apps/MotorsportTracker/Backend/config/services.yaml
+++ b/apps/MotorsportTracker/Backend/config/services.yaml
@@ -14,6 +14,7 @@ parameters:
 
 imports:
   - { resource: ../../../../src/Backend/MotorsportTracker/Shared/Infrastructure/DependencyInjection/Symfony/motorsport_tracker_services.yaml }
+  - { resource: ../../../../src/Backend/Country/Infrastructure/DependencyInjection/Symfony/country_services.yaml }
   - { resource: ../../../../src/Backend/Shared/Infrastructure/DependencyInjection/Symfony/shared_services.yaml }
 
 services:
