Feature: View the team standings via the api

--- a/apps/MotorsportTracker/Backend/config/routes/motorsport.yaml
+++ b/apps/MotorsportTracker/Backend/config/routes/motorsport.yaml
@@ -1,5 +1,11 @@
-monitoring:
+events:
   resource: ../../src/MotorsportTracker/Event/Controller/
   prefix: /events
+  type: annotation
+  stateless: true
+
+standings:
+  resource: ../../src/MotorsportTracker/Standing/Controller/
+  prefix: /standings
   type: annotation
   stateless: true
