--- a/behat-config.yml
+++ b/behat-config.yml
@@ -32,6 +32,8 @@ default:
     api_tests:
       paths: [ features ]
       contexts:
+        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportTracker\Championship\SeasonContext
+        - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportTracker\Standing\StandingContext
         - Kishlin\Tests\Apps\MotorsportTracker\Backend\ApiTests\Context\MotorsportTracker\Event\CalendarContext
       filters:
         tags: '@api'
