--- a/apps/MotorsportTracker/Frontend/tsconfig.json
+++ b/apps/MotorsportTracker/Frontend/tsconfig.json
@@ -1,14 +1,34 @@
 {
   "compilerOptions": {
-    "module": "system",
+    "module": "esnext",
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
     "outFile": "../../build/local/tsc.js",
     "sourceMap": true,
-    "jsx": "react",
-    "moduleResolution": "node"
+    "jsx": "preserve",
+    "moduleResolution": "node",
+    "target": "es5",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "incremental": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
+  ]
 }
