--- a/apps/MotorsportTracker/Frontend/.eslintrc.json
+++ b/apps/MotorsportTracker/Frontend/.eslintrc.json
@@ -57,6 +57,13 @@
         ],
         "no-undef": "off",
         "no-shadow": "off",
+        "react/function-component-definition": [
+            2,
+            {
+                "namedComponents": "arrow-function",
+                "unnamedComponents": "arrow-function"
+            }
+        ],
         "react/jsx-indent": ["error", 4],
         "react/jsx-indent-props": ["error", 4],
         "react/jsx-props-no-spreading": "off",
