--- a/apps/MotorsportTracker/Frontend/package.json
+++ b/apps/MotorsportTracker/Frontend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.15",
     "@testing-library/user-event": "^14.4.3",
