Feature: Use the FrozenClock in testing environments

--- a/src/Backend/Shared/Infrastructure/DependencyInjection/Symfony/shared_services.yaml
+++ b/src/Backend/Shared/Infrastructure/DependencyInjection/Symfony/shared_services.yaml
@@ -100,3 +100,13 @@ when@test:
 
     Kishlin\Backend\Shared\Domain\Bus\Query\QueryBus:
       public: true
+
+    Kishlin\Backend\Shared\Domain\Time\Clock:
+      class: 'Kishlin\Backend\Shared\Infrastructure\Time\FrozenClock'
+
+
+when@acceptance:
+  services:
+    Kishlin\Backend\Shared\Domain\Time\Clock:
+      class: 'Kishlin\Backend\Shared\Infrastructure\Time\FrozenClock'
+      public: true
