Feature: Directly access calendar views through the api endpoint

--- a/apps/MotorsportTracker/Backend/config/routes/motorsport.yaml
+++ b/apps/MotorsportTracker/Backend/config/routes/motorsport.yaml
@@ -1,6 +1,6 @@
-events:
-  resource: ../../src/MotorsportTracker/Event/Controller/
-  prefix: /api/v1/events
+calendar:
+  resource: ../../src/MotorsportTracker/Calendar/Controller/
+  prefix: /api/v1/calendar
   type: annotation
   stateless: true
 
