Feature: Create a new Event with complete data

--- a/etc/Fixtures/Core/motorsport.event.event.yaml
+++ b/etc/Fixtures/Core/motorsport.event.event.yaml
@@ -2,52 +2,88 @@ dutchGrandPrix2022:
   seasonId: '@motorsport.championship.season.formulaOne2022'
   venueId: '@motorsport.venue.venue.zandvoort'
   index: '14'
-  label: 'Dutch GP'
+  slug: 'Dutch-gp'
+  name: 'Dutch GP'
+  shortName: 'Dutch GP'
+  startTime: '2022-09-04 13:00:00'
+  endTime: '2022-09-04 13:00:00'
 
 australianGrandPrix2022:
   seasonId: '@motorsport.championship.season.formulaOne2022'
   venueId: '@motorsport.venue.venue.melbourne'
   index: '2'
-  label: 'Australian GP'
+  slug: 'Australian-gp'
+  name: 'Australian GP'
+  shortName: 'Australian GP'
+  startTime: '2022-04-10 05:00:00'
+  endTime: '2022-04-10 05:00:00'
 
 emiliaRomagnaGrandPrix2022:
   seasonId: '@motorsport.championship.season.formulaOne2022'
   venueId: '@motorsport.venue.venue.emiliaRomagna'
   index: '3'
-  label: 'Emilia Romagna GP'
+  slug: 'Emilia Romagna-gp'
+  name: 'Emilia Romagna GP'
+  shortName: 'Emilia Romagna GP'
+  startTime: '2022-04-23 14:30:00'
+  endTime: '2022-04-24 13:00:00'
 
 americasMotoGP2022:
   seasonId: '@motorsport.championship.season.motoGP2022'
   venueId: '@motorsport.venue.venue.circuitOfTheAmericas'
   index: '3'
-  label: 'Americas GP'
+  slug: 'Americas-gp'
+  name: 'Americas GP'
+  shortName: 'Americas GP'
+  startTime: '2022-04-10 18:00:00'
+  endTime: '2022-04-10 18:00:00'
 
 italianGrandPrix2022:
   seasonId: '@motorsport.championship.season.formulaOne2022'
   venueId: '@motorsport.venue.venue.monza'
   index: '15'
-  label: 'Italian GP'
+  slug: 'Italian-gp'
+  name: 'Italian GP'
+  shortName: 'Italian GP'
+  startTime: '2022-09-11 13:00:00'
+  endTime: '2022-09-11 13:00:00'
 
 singaporeGrandPrix2022:
   seasonId: '@motorsport.championship.season.formulaOne2022'
   venueId: '@motorsport.venue.venue.singapore'
   index: '16'
-  label: 'Singapore GP'
+  slug: 'Singapore-gp'
+  name: 'Singapore GP'
+  shortName: 'Singapore GP'
+  startTime: '2022-10-02 12:00:00'
+  endTime: '2022-10-02 12:00:00'
 
 hungarianGrandPrix2022:
   seasonId: '@motorsport.championship.season.formulaOne2022'
   venueId: '@motorsport.venue.venue.hungaroring'
   index: '12'
-  label: 'Hungarian GP'
+  slug: 'Hungarian-gp'
+  name: 'Hungarian GP'
+  shortName: 'Hungarian GP'
+  startTime: '2022-07-31 13:00:00'
+  endTime: '2022-07-31 13:00:00'
 
 hungarianGrandPrix2019:
   seasonId: '@motorsport.championship.season.formulaOne2019'
   venueId: '@motorsport.venue.venue.hungaroring'
   index: '10'
-  label: 'Hungarian GP'
+  slug: 'Hungarian-gp'
+  name: 'Hungarian GP'
+  shortName: 'Hungarian GP'
+  startTime: '2019-08-04 13:10:00'
+  endTime: '2019-08-04 13:10:00'
 
 belgianGrandPrix2019:
   seasonId: '@motorsport.championship.season.formulaOne2019'
   venueId: '@motorsport.venue.venue.spaFrancorchamps'
   index: '11'
-  label: 'Belgian GP'
+  slug: 'Belgian-gp'
+  name: 'Belgian GP'
+  shortName: 'Belgian GP'
+  startTime: '2019-09-01 13:10:00'
+  endTime: '2019-09-01 13:10:00'
