--- a/etc/Fixtures/Core/motorsport.event.eventSession.yaml
+++ b/etc/Fixtures/Core/motorsport.event.eventSession.yaml
@@ -1,5 +1,5 @@
 dutchGrandPrix2022Race:
-  sessionTypeId: '@motorsport.event.stepType.race'
+  sessionTypeId: '@motorsport.event.sessionType.race'
   eventId: '@motorsport.event.event.dutchGrandPrix2022'
   slug: 'dutchGrandPrix2022Race'
   hasResult: false
@@ -7,7 +7,7 @@ dutchGrandPrix2022Race:
   endDate: '2022-09-04 14:00:00'
 
 australianGrandPrix2022Race:
-  sessionTypeId: '@motorsport.event.stepType.race'
+  sessionTypeId: '@motorsport.event.sessionType.race'
   eventId: '@motorsport.event.event.australianGrandPrix2022'
   slug: 'australianGrandPrix2022Race'
   hasResult: false
@@ -15,7 +15,7 @@ australianGrandPrix2022Race:
   endDate: '2022-04-10 06:00:00'
 
 emiliaRomagnaGrandPrix2022SprintQualifying:
-  sessionTypeId: '@motorsport.event.stepType.sprintQualifying'
+  sessionTypeId: '@motorsport.event.sessionType.sprintQualifying'
   eventId: '@motorsport.event.event.emiliaRomagnaGrandPrix2022'
   slug: 'emiliaRomagnaGrandPrix2022Sprint'
   hasResult: false
@@ -23,7 +23,7 @@ emiliaRomagnaGrandPrix2022SprintQualifying:
   endDate: '2022-04-23 15:30:00'
 
 emiliaRomagnaGrandPrix2022Race:
-  sessionTypeId: '@motorsport.event.stepType.race'
+  sessionTypeId: '@motorsport.event.sessionType.race'
   eventId: '@motorsport.event.event.emiliaRomagnaGrandPrix2022'
   slug: 'emiliaRomagnaGrandPrix2022Race'
   hasResult: false
@@ -31,7 +31,7 @@ emiliaRomagnaGrandPrix2022Race:
   endDate: '2022-04-24 14:00:00'
 
 americasMotoGP2022Race:
-  sessionTypeId: '@motorsport.event.stepType.race'
+  sessionTypeId: '@motorsport.event.sessionType.race'
   eventId: '@motorsport.event.event.americasMotoGP2022'
   slug: 'americasMotoGP2022Race'
   hasResult: false
@@ -39,7 +39,7 @@ americasMotoGP2022Race:
   endDate: '2022-04-10 19:00:00'
 
 italianGrandPrix2022Race:
-  sessionTypeId: '@motorsport.event.stepType.race'
+  sessionTypeId: '@motorsport.event.sessionType.race'
   eventId: '@motorsport.event.event.italianGrandPrix2022'
   slug: 'italianGrandPrix2022Race'
   hasResult: false
@@ -47,7 +47,7 @@ italianGrandPrix2022Race:
   endDate: '2022-09-11 14:00:00'
 
 singaporeGrandPrix2022Race:
-  sessionTypeId: '@motorsport.event.stepType.race'
+  sessionTypeId: '@motorsport.event.sessionType.race'
   eventId: '@motorsport.event.event.singaporeGrandPrix2022'
   slug: 'singaporeGrandPrix2022Race'
   hasResult: false
@@ -55,7 +55,7 @@ singaporeGrandPrix2022Race:
   endDate: '2022-10-02 13:00:00'
 
 hungarianGrandPrix2022Race:
-  sessionTypeId: '@motorsport.event.stepType.race'
+  sessionTypeId: '@motorsport.event.sessionType.race'
   eventId: '@motorsport.event.event.hungarianGrandPrix2022'
   slug: 'hungarianGrandPrix2022Race'
   hasResult: false
@@ -63,7 +63,7 @@ hungarianGrandPrix2022Race:
   endDate: '2022-07-31 14:00:00'
 
 hungarianGrandPrix2019Race:
-  sessionTypeId: '@motorsport.event.stepType.race'
+  sessionTypeId: '@motorsport.event.sessionType.race'
   eventId: '@motorsport.event.event.hungarianGrandPrix2019'
   slug: 'hungarianGrandPrix2019Race'
   hasResult: false
@@ -71,7 +71,7 @@ hungarianGrandPrix2019Race:
   endDate: '2019-08-04 14:10:00'
 
 belgianGrandPrix2019Race:
-  sessionTypeId: '@motorsport.event.stepType.race'
+  sessionTypeId: '@motorsport.event.sessionType.race'
   eventId: '@motorsport.event.event.belgianGrandPrix2019'
   slug: 'belgianGrandPrix2019Race'
   hasResult: false
