--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.0.*",
         "symfony/messenger": "6.0.*",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/service-contracts": "^2.5",
