Feature: Filter sessions based on their name
- Remove pre quals and warmup
- Rename Free Practices to use the same codes

--- a/apps/Backoffice/config/services.yaml
+++ b/apps/Backoffice/config/services.yaml
@@ -131,8 +131,8 @@ services:
     Kishlin\Backend\Shared\Infrastructure\Monitoring\Probe\Probe:
       tags: ['kishlin.shared.infrastructure.monitoring.probe']
 
-    Kishlin\Backend\MotorsportStatsScrapper\Infrastructure\Mutator\Championship\ChampionshipMutator:
-      tags: ['kishlin.motorsportcache.infrastructure.mutator.championship']
+    Kishlin\Backend\MotorsportStatsScrapper\Infrastructure\DataModifier\Championship\AbstractChampionshipModifier:
+      tags: ['kishlin.motorsportcache.infrastructure.data-mutator.championship']
 
 
 ##> Make some services public to override them in tests
