--- a/etc/Fixtures/Core/motorsport.driver.driver.yaml
+++ b/etc/Fixtures/Core/motorsport.driver.driver.yaml
@@ -1,23 +1,29 @@
 maxVerstappen:
   name: 'Max Verstappen'
+  slug: 'max-verstappen'
   countryId: '@country.country.netherlands'
 
 sergioPerez:
   name: 'Sergio Perez'
+  slug: 'sergio-perez'
   countryId: '@country.country.mexico'
 
 pierreGasly:
   name: 'Pierre Gasly'
+  slug: 'pierre-gasly'
   countryId: '@country.country.france'
 
 lewisHamilton:
   name: 'Lewis Hamilton'
+  slug: 'lewis-hamilton'
   countryId: '@country.country.unitedKingdom'
 
 nicholasLatifi:
   name: 'Nicholas Latifi'
+  slug: 'nicholas-latifi'
   countryId: '@country.country.canada'
 
 nyckDeVries:
-  name: 'de Nick Vries'
+  name: 'Nick de Vries'
+  slug: 'nick-de-vries'
   countryId: '@country.country.netherlands'
