Project: Add env variables for test databases

--- a/.env
+++ b/.env
@@ -22,6 +22,8 @@ COMPOSER_CACHE_DIR=/srv/cache/composer
 # DB Config
 DB_CORE=core-dev
 DB_CACHE=cache-dev
+DB_CORE_TEST=core-test
+DB_CACHE_TEST=cache-test
 DB_USER=motorsporttracker
 DB_PASSWORD=motorsporttracker
 DB_VERSION=14.6
