--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "ext-curl": "*",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-pdo": "*",
         "composer/package-versions-deprecated": "1.11.99.4",
         "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.5",
