--- a/etc/Fixtures/Core/motorsport.team.team.yaml
+++ b/etc/Fixtures/Core/motorsport.team.team.yaml
@@ -1,19 +1,11 @@
 redBullRacing:
-  countryId: '@country.country.austria'
-  name: 'Red Bull Racing'
-  color: '#0600EF'
+  ref: '41be2072-17ab-455f-8522-8b96bc315e47'
 
 mercedes:
-  countryId: '@country.country.germany'
-  name: 'Mercedes'
-  color: '#00D2BE'
+  ref: '71d00c89-0eca-482d-bbce-db161c293e90'
 
 toroRosso:
-  countryId: '@country.country.italia'
-  name: 'Toro Rosso'
-  color: '#2B4562'
+  ref: '054e056f-f15d-412b-a80f-a310275faf81'
 
 williams:
-  countryId: '@country.country.unitedKingdom'
-  name: 'Williams'
-  color: '#005AFF'
+  ref: 'd6f1339e-97d5-4e3a-9fb6-6f7db45e34b7'
