Configuration: Use the core database connection as default Connection service

--- a/apps/Backoffice/config/services.yaml
+++ b/apps/Backoffice/config/services.yaml
@@ -104,6 +104,9 @@ services:
       $password: '%env(DB_PASSWORD)%'
     public: true
 
+  Kishlin\Backend\Persistence\Core\Connection\Connection:
+    alias: 'kishlin.app.infrastructure.connection.core'
+
 
   _instanceof:
     Kishlin\Backend\Shared\Infrastructure\Monitoring\Controller\Symfony\AbstractCheckHealthController:
